fix(ui): some contrast issues

--- a/ui/src/styles/layout/vue-tour-overload.scss
+++ b/ui/src/styles/layout/vue-tour-overload.scss
@@ -46,7 +46,7 @@
         font-size: var(--font-size-sm);
         text-align: center;
         border: none;
-        color: var(--bs-gray-500);
+        color: var(--bs-gray-700);
         background-color: var(--bs-white);
         margin-bottom: var(--spacer);
 
